latest product+phone nav decoration

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@ a.active hr {
   font-optical-sizing: auto;
   font-style: normal;
 }
+@media (max-width:640px){
+  a.active{
+    background-color: black;
+    color: white;
+  }
+}
